--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 				 <a class="nav-link active" href="index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
-				 <a class="nav-link active" href="services.html">Our services</a>
+				 <a class="nav-link " href="services.html">Our services</a>
 			  </li>
 			  <li class="nav-item">
 				 <a class="nav-link" href="about.html">About</a>
@@ -74,12 +74,12 @@
 				  <h3 class="mb-5">Sign in</h3>
 	  
 				  <div class="form-outline mb-4">
-					<input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+					<input type="email" id="email" class="form-control form-control-lg" />
 					<label class="form-label" for="typeEmailX-2">Email</label>
 				  </div>
 	  
 				  <div class="form-outline mb-4">
-					<input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+					<input type="password" id="password" class="form-control form-control-lg" />
 					<label class="form-label" for="typePasswordX-2">Password</label>
 				  </div>
 	  
@@ -89,7 +89,7 @@
 					<label class="form-check-label" for="form1Example3"> Remember password </label>
 				  </div>
 	  
-				  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+				  <button class="btn btn-primary btn-lg btn-block" type="submit" id="submitData">Login</button>
 	  
 				  <hr class="my-4">
 	  
@@ -208,5 +208,89 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
+
+
+<!-- Back end Firebase Script-->
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDhURhjs8EnU9yD_ebJMhAP_Y4WgYhY-AU",
+      authDomain: "sdp-website-6b4ae.firebaseapp.com",
+      projectId: "sdp-website-6b4ae",
+      storageBucket: "sdp-website-6b4ae.appspot.com",
+      messagingSenderId: "1024170213513",
+      appId: "1:1024170213513:web:bbb82fa671078b211e8658"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    //The event to submit data
+   // submitData.addEventListener('click', (e) => {
+//         var email = document.getElementById('email').value
+//         var password = document.getElementById('pasword').value
+//         createUserWithEmailAndPassword(auth, email, password)
+//   .then((userCredential) => {
+//     // Signed in 
+//     const user = userCredential.user;
+//     // ...redirect them to another page
+//     alert("You sucsessfuly register");
+//   })
+//   .catch((error) => {
+//     const errorCode = error.code;
+//     const errorMessage = error.message;
+//     // ..
+//     alert("error");
+//   });
+submitData.addEventListener('click', (e) => {
+    e.preventDefault()
+var email = document.getElementById('email').value;
+var password = document.getElementById('password').value;
+
+// log in user
+signInWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ...
+
+        // save log in details into real time database
+        var lgDate = new Date();
+        update(ref(database, 'users/' + user.uid), {
+            last_login: lgDate,
+        })
+            .then(() => {
+                // Data saved successfully!
+                alert('user logged in successfully');
+
+            })
+            .catch((error) => {
+                // The write failed...
+                alert(error);
+            });
+    })
+    .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        alert(errorMessage);
+    });
+
+//sign out user
+signOut(auth).then(() => {
+       // Sign-out successful.
+}).catch((error) => {
+    // An error happened.
+});
+});
+  </script>
 </body>
 </html>
