--- a/singup.html
+++ b/singup.html
@@ -74,7 +74,7 @@
           <div class="col-lg-8">
             <h2 class="fw-bold mb-5">Sign up now</h2>
             <form>
-              <!-- 2 column grid layout with text inputs for the first and last names -->
+              <!-- 2 column grid layout with text inputs for the first and last names 
               <div class="row">
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
@@ -89,16 +89,16 @@
                   </div>
                 </div>
               </div>
-  
+  -->
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control" />
+                <input type="text" id="email" class="form-control"/>
                 <label class="form-label" for="form3Example3">Email address</label>
               </div>
   
               <!-- Password input -->
               <div class="form-outline mb-4">
-                <input type="password" id="form3Example4" class="form-control" />
+                <input type="password" id="password" class="form-control" />
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
   
@@ -111,7 +111,7 @@
               </div>
   
               <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4">
+              <button type="submit" class="btn btn-primary btn-block mb-4" id="submitData">
                 Sign up
               </button>
   
@@ -130,7 +130,7 @@
                   <i class="fab fa-twitter"></i>
                 </button>
   
-                <button type="button" class="btn btn-link btn-floating mx-1">
+                <button type="button" class="btn btn-link btn-floating mx-1" >
                   <i class="fab fa-github"></i>
                 </button>
               </div>
@@ -243,5 +243,114 @@
 <!-- Contact form JavaScript -->
 <script src="js/jqBootstrapValidation.js"></script>
 <script src="js/contact_me.js"></script>
+
+
+<!-- Back end Firebase Script-->
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDhURhjs8EnU9yD_ebJMhAP_Y4WgYhY-AU",
+      authDomain: "sdp-website-6b4ae.firebaseapp.com",
+      projectId: "sdp-website-6b4ae",
+      storageBucket: "sdp-website-6b4ae.appspot.com",
+      messagingSenderId: "1024170213513",
+      appId: "1:1024170213513:web:bbb82fa671078b211e8658"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    //The event to submit data
+   // submitData.addEventListener('click', (e) => {
+//         var email = document.getElementById('email').value
+//         var password = document.getElementById('pasword').value
+//         createUserWithEmailAndPassword(auth, email, password)
+//   .then((userCredential) => {
+//     // Signed in 
+//     const user = userCredential.user;
+//     // ...redirect them to another page
+//     alert("You sucsessfuly register");
+//   })
+//   .catch((error) => {
+//     const errorCode = error.code;
+//     const errorMessage = error.message;
+//     // ..
+//     alert("error");
+//   });
+submitData.addEventListener('click', (e) => {
+    e.preventDefault()
+var email = document.getElementById('email').value;
+var password = document.getElementById('password').value;
+
+//sign up user
+createUserWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ... user.uid
+        set(ref(database, 'users/' + user.uid), {
+            email: email,
+            password: password
+        })
+            .then(() => {
+                // Data saved successfully!
+                alert('user created successfully');
+
+            })
+            .catch((error) => {
+                // The write failed...
+                alert(error);
+            });
+    })
+    .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        // ..
+        alert(errorMessage);
+    });
+
+// log in user
+signInWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ...
+
+        // save log in details into real time database
+        var lgDate = new Date();
+        update(ref(database, 'users/' + user.uid), {
+            last_login: lgDate,
+        })
+            .then(() => {
+                // Data saved successfully!
+                alert('user logged in successfully');
+
+            })
+            .catch((error) => {
+                // The write failed...
+                alert(error);
+            });
+    })
+    .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        alert(errorMessage);
+    });
+
+//sign out user
+signOut(auth).then(() => {
+       // Sign-out successful.
+}).catch((error) => {
+    // An error happened.
+});
+});
+  </script>
 </body>
 </html>
