--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@ impactful individuals</p>
 					  <img class="card-img-top" src="images/team_01.jpeg" alt="" />
 					  <div class="card-body">
 						  <h2 class="card-title">Jean</h2>
-						  <h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
 						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					  </div>
 					</div>
@@ -128,7 +128,7 @@ impactful individuals</p>
 					<img class="card-img-top" src="images/team_02.jpeg" alt="" />
 					<div class="card-body">
 						<h2 class="card-title">Loic</h2>
-						<h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						<h6 class="card-subtitle mb-2">Strategic Marketing</h6>
 						<p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					</div>
 				  </div>
@@ -138,25 +138,18 @@ impactful individuals</p>
 					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
 					  <div class="card-body">
 						  <h2 class="card-title">Jetro</h2>
-						  <h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
+						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
 						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					  </div>
 					</div>
 				  </div>
 				  <div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
-					  <img class="card-img-top" src="images/IMG_7409.jpeg" alt="" />
+					  <img class="card-img-top" src="images/team_04.jpg" alt="" />
 					  <div class="card-body">
-						  <h4 class="card-title">Jordan</h4>
-						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
-						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					  </div>
-					  <div class="card-footer">
-						  <ul>
-							  <li><a href="https://www.facebook.com/JayNtaku19"><i class="fab fa-facebook-f"></i></a></li>
-							  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						  </ul>
+						  <h2 class="card-title">Jordan</h2>
+						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
+						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					  </div>
 					</div>
 				  </div>
