--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 			<div class="wrapper container" >
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images/about-img.jpeg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images\all-title-bg.jpeg" alt="" />
 				</div>
 				<div class="col-lg-6">
 					<h2>About The Sustainability Diversity Project</h2>
