--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 	</div>
 </nav>
 	  <!-- full Title -->
-  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+  <div class="full-title" style="background-image: url('images/all-title-bg.png')">
 	<div class="container">
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">About
@@ -77,7 +77,7 @@
 			<div class="wrapper container" >
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images\all-title-bg.jpeg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images\about-img.jpeg" alt="" />
 				</div>
 				<div class="col-lg-6">
 					<h2>About The Sustainability Diversity Project</h2>
