--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 </nav>
 
 	<!-- full Title -->
-	<div class="full-title" style="background-image: url('images/blog-img-02.jpeg')">
+	<div class="full-title" style="background-image: url('images/all-title-bg.png')">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">LOG IN
@@ -212,85 +212,6 @@
 
 
 
-<!-- Back end Firebase Script-->
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDhURhjs8EnU9yD_ebJMhAP_Y4WgYhY-AU",
-      authDomain: "sdp-website-6b4ae.firebaseapp.com",
-      projectId: "sdp-website-6b4ae",
-      storageBucket: "sdp-website-6b4ae.appspot.com",
-      messagingSenderId: "1024170213513",
-      appId: "1:1024170213513:web:bbb82fa671078b211e8658"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
 
-    //The event to submit data
-   // submitData.addEventListener('click', (e) => {
-//         var email = document.getElementById('email').value
-//         var password = document.getElementById('pasword').value
-//         createUserWithEmailAndPassword(auth, email, password)
-//   .then((userCredential) => {
-//     // Signed in 
-//     const user = userCredential.user;
-//     // ...redirect them to another page
-//     alert("You sucsessfuly register");
-//   })
-//   .catch((error) => {
-//     const errorCode = error.code;
-//     const errorMessage = error.message;
-//     // ..
-//     alert("error");
-//   });
-submitData.addEventListener('click', (e) => {
-    e.preventDefault()
-var email = document.getElementById('email').value;
-var password = document.getElementById('password').value;
-
-// log in user
-signInWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-        // Signed in
-        const user = userCredential.user;
-        // ...
-
-        // save log in details into real time database
-        var lgDate = new Date();
-        update(ref(database, 'users/' + user.uid), {
-            last_login: lgDate,
-        })
-            .then(() => {
-                // Data saved successfully!
-                alert('user logged in successfully');
-
-            })
-            .catch((error) => {
-                // The write failed...
-                alert(error);
-            });
-    })
-    .catch((error) => {
-        const errorCode = error.code;
-        const errorMessage = error.message;
-        alert(errorMessage);
-    });
-
-//sign out user
-signOut(auth).then(() => {
-       // Sign-out successful.
-}).catch((error) => {
-    // An error happened.
-});
-});
-  </script>
 </body>
 </html>
