--- a/services.html
+++ b/services.html
@@ -29,10 +29,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-               <a class="nav-link active" href="index.html">Home</a>
+               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link " href="services.html">Our services</a>
+               <a class="nav-link active" href="services.html">Our services</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" href="about.html">About</a>
@@ -47,7 +47,7 @@
          <a class="nav-link" href="login.html">Log in</a>
        </li>
        <li class="nav-item">
-        <a class="nav-link" href="singup.html">Sing Up</a>
+        <a class="nav-link" href="singup.html">Sign Up</a>
       </li>
          </ul>
       </div>
@@ -55,7 +55,7 @@
 </nav>
 	
 	<!-- full Title -->
-	<div class="full-title" style="background-image: url('images/all-title-bg.png')" >
+	<div class="full-title" style="background-image: url('images/blog-img-01.jpeg')" >
 		<div class="container" >
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Our services
