--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <a class="nav-link" href="login.html">Log in</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="singup.html">Sing Up</a>
+            <a class="nav-link" href="singup.html">Sign Up</a>
           </li>
              </ul>
           </div>
