--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		   <ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				 <a class="nav-link active" href="index.html">Home</a>
+				 <a class="nav-link" href="index.html">Home</a>
 			  </li>
 			  <li class="nav-item">
 				 <a class="nav-link" href="services.html">Our services</a>
 			  </li>
 			  <li class="nav-item">
-				 <a class="nav-link" href="about.html">About</a>
+				 <a class="nav-link active" href="about.html">About</a>
 			  </li>
 			  <li class="nav-item">
 				 <a class="nav-link" href="blog-post.html">Blog</a>
@@ -48,14 +48,14 @@
 		   <a class="nav-link" href="login.html">Log in</a>
 		 </li>
 		 <li class="nav-item">
-		  <a class="nav-link" href="singup.html">Sing Up</a>
+		  <a class="nav-link" href="singup.html">Sign Up</a>
 		</li>
 		   </ul>
 		</div>
 	</div>
 </nav>
 	  <!-- full Title -->
-  <div class="full-title" style="background-image: url('images/all-title-bg.png')">
+  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
 	<div class="container">
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">About
@@ -77,7 +77,7 @@
 			<div class="wrapper container" >
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images\about-img.jpeg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images/about-img.jpeg" alt="" />
 				</div>
 				<div class="col-lg-6">
 					<h2>About The Sustainability Diversity Project</h2>
@@ -116,10 +116,10 @@ impactful individuals</p>
 				<div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
 					  <img class="card-img-top" src="images/team_01.jpeg" alt="" />
-					  <div class="card-body">
+					  <div class="card-js">
 						  <h2 class="card-title">Jean</h2>
-						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
-						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
+						  <h6 class="card-subtitle mb-2 text-muted">Social Media Representative</h6>
+						  <p class="card-text">As a member of the social media team, he was in charge of the garden's social media pages.
 					  </div>
 					</div>
 				  </div>
@@ -128,7 +128,7 @@ impactful individuals</p>
 					<img class="card-img-top" src="images/team_02.jpeg" alt="" />
 					<div class="card-body">
 						<h2 class="card-title">Loic</h2>
-						<h6 class="card-subtitle mb-2">Strategic Marketing</h6>
+						<h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
 						<p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
 					</div>
 				  </div>
@@ -136,20 +136,27 @@ impactful individuals</p>
 				<div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
 					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
-					  <div class="card-body">
+					  <div class="card-jetro">
 						  <h2 class="card-title">Jetro</h2>
-						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
-						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
+						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
+						  <p class="card-text">He spearheaded the art department, which created all of the decorations at Oude Molen Food Garden. His contributions brought the garden to life.
 					  </div>
 					</div>
 				  </div>
 				  <div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
-					  <img class="card-img-top" src="images/team_04.jpg" alt="" />
-					  <div class="card-body">
+					  <img class="card-img-top" src="images/IMG_7409.jpeg" alt="" />
+					  <div class="card-jordan">
 						  <h2 class="card-title">Jordan</h2>
-						  <h6 class="card-subtitle mb-2">Strategic Marketing</h6>
-						  <p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
+						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
+						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+					  </div>
+					  <div class="card-footer">
+						  <ul>
+							  <li><a href="https://www.facebook.com/JayNtaku19"><i class="fab fa-facebook-f"></i></a></li>
+							  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						  </ul>
 					  </div>
 					</div>
 				  </div>
