--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 </nav>
 
 	<!-- full Title -->
-	<div class="full-title" style="background-image: url('images/blog-img-02.jpeg')">
+	<div class="full-title" style="background-image: url('images/all-title-bg.png')">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">LOG IN
