--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 	</div>
 </nav>
 	  <!-- full Title -->
-  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+  <div class="full-title" style="background-image: url('images/all-title-bg.png')">
 	<div class="container">
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">About
